welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: not found: value B
    if(a>0 && B>0){return true}
              ^